--- a/index.html
+++ b/index.html
@@ -18,7 +18,60 @@
             </div>
         </div>
     </section>
-
+    <!-- Service -->
+    <section id="services">
+        <div class="services container">
+        <div class="service-top">
+            <h1 class="section-title">Serv<span>i</span>ces</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate repellendus amet provident necessitatibus dolore id.</p>
+        </div>
+        <div class="service-bottom">
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                </div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                </div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                </div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                </div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                </div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            </div>
+            <div class="service-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                </div>
+                <h2>Web Design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            </div>
+        </div>
+    </div>
+    </section>
+    
     <script src="js/main.js"></script>
 </body>
 </html>
