add section - projects

--- a/index.html
+++ b/index.html
@@ -58,6 +58,69 @@
         </div>
     </div>
     </section>
+<!-- End Service Section -->
+
+<!-- Projects Section -->
+<section id="projects">
+    <div class="projects container">
+        <div class="projects-header">
+            <h1 class="section-title">Recent <span>Projects</span></h1>
+        </div>
+        <div class="all-projects">
+            <div class="project-item">
+                <div class="project-info">
+                    <h1>Project 1</h1>
+                    <h2>Coding is Love</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+                </div>
+                <div class="project-img">
+                    <img src="/img/img-1.png">
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-info">
+                    <h1>Project 2</h1>
+                    <h2>Coding is Love</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+                </div>
+                <div class="project-img">
+                    <img src="/img/img-1.png">
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-info">
+                    <h1>Project 3</h1>
+                    <h2>Coding is Love</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+                </div>
+                <div class="project-img">
+                    <img src="/img/img-1.png">
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-info">
+                    <h1>Project 4</h1>
+                    <h2>Coding is Love</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+                </div>
+                <div class="project-img">
+                    <img src="/img/img-1.png">
+                </div>
+            </div>
+            <div class="project-item">
+                <div class="project-info">
+                    <h1>Project 5</h1>
+                    <h2>Coding is Love</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+                </div>
+                <div class="project-img">
+                    <img src="/img/img-1.png">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
     
     <script src="js/main.js"></script>
 </body>
