--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
                 </div>
                 <div class="project-img">
-                    <img src="/img/img-1.png">
+                    <img src="img/img-1.png">
                 </div>
             </div>
             <div class="project-item">
@@ -84,7 +84,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
                 </div>
                 <div class="project-img">
-                    <img src="/img/img-1.png">
+                    <img src="img/img-1.png">
                 </div>
             </div>
             <div class="project-item">
@@ -94,7 +94,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
                 </div>
                 <div class="project-img">
-                    <img src="/img/img-1.png">
+                    <img src="img/img-1.png">
                 </div>
             </div>
             <div class="project-item">
@@ -104,7 +104,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
                 </div>
                 <div class="project-img">
-                    <img src="/img/img-1.png">
+                    <img src="img/img-1.png">
                 </div>
             </div>
             <div class="project-item">
@@ -114,7 +114,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
                 </div>
                 <div class="project-img">
-                    <img src="/img/img-1.png">
+                    <img src="img/img-1.png">
                 </div>
             </div>
         </div>
