--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
 <!-- About Section -->
 <section id="about">
     <div class="about container">
-        <div class="col-left">
-            <div class="about-img">
-                <img src="img/img-2.png" alt="">
-            </div>
-        </div>
         <div class="col-right">
             <h1 class="section-title">About <span>me</span></h1>
             <h2>Front End Developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum soluta suscipit. Eveniet sint, minus accusamus libero cupiditate odio distinctio, veritatis quaerat culpa similique nostrum error dicta, laboriosam ea impedit velit maiores soluta possimus architecto esse. Voluptatum veniam accusantium, deserunt numquam ipsa aut officia omnis, eligendi totam, quas rem praesentium.libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus</p>
-            <a href="">Download Resume</a>
+            <a href="#" class="cta">Download Resume</a>
+        </div>
+        <div class="col-left">
+            <div class="about-img">
+                <img src="img/img-2.png" alt="">
+            </div>
         </div>
     </div>
 </section>
