--- a/index.html
+++ b/index.html
@@ -138,6 +138,46 @@
     </div>
 </section>
 <!-- End About Section -->
+
+
+<!-- Contact Section -->
+
+<div class="contact container">
+    <div><h1 class="section-title">Contact <span>info</span></h1> </div>
+    <div class="contact-items">
+        <div class="contact-item">
+            <div class="icon">
+                <img src="https://img.icons8.com/bubbles/100/000000/phone.png" alt="">
+            </div>
+            <div class="contact-info">
+                <h1>Phone</h1>
+                <h2>+1 234 123 1234</h2>
+                <h2>+1 234 123 1234</h2>
+            </div>
+        </div>
+        <div class="contact-item">
+            <div class="icon">
+                <img src="https://img.icons8.com/bubbles/100/000000/new-post.png" alt="">
+            </div>
+            <div class="contact-info">
+                <h1>Email</h1>
+                <h2>info@gmail.com</h2>
+                <h2>asrgo@gmail.com</h2>
+            </div>
+        </div>
+        <div class="contact-item">
+            <div class="icon">
+                <img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" alt="">
+            </div>
+            <div class="contact-info">
+                <h1>Adress</h1>
+                <h2>Zhytomyr, Kyiv, Lwiw</h2>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- End Contact Section -->
     
     <script src="js/main.js"></script>
 </body>
