--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <section id="hero">
         <div class="hero container">
             <div>
                 <h1>Hello,<span></span></h1>
-                <h1>my name is <span></span></h1> 
+                <h1>my name is <span></span></h1>
                 <h1>Arfan <span></span></h1>
                 <a href="#" type="button" class="cta">Portfolio</a>
             </div>
@@ -21,164 +23,193 @@
     <!-- Service -->
     <section id="services">
         <div class="services container">
-        <div class="service-top">
-            <h1 class="section-title">Serv<span>i</span>ces</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate repellendus amet provident necessitatibus dolore Lorem ipsum dolor sit amet, consectetur adipisicing elit. ra hvake hkjak rkjv ra</p>
-        </div>
-        <div class="service-bottom">
-            <div class="service-item">
-                <div class="icon">
-                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
-                </div>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
+            <div class="service-top">
+                <h1 class="section-title">Serv<span>i</span>ces</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate repellendus amet provident
+                    necessitatibus dolore Lorem ipsum dolor sit amet, consectetur adipisicing elit. ra hvake hkjak rkjv
+                    ra</p>
             </div>
-            <div class="service-item">
-                <div class="icon">
-                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+            <div class="service-bottom">
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam
+                        amet provident necessitatibus dolore id.</p>
                 </div>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
-            </div>
-            <div class="service-item">
-                <div class="icon">
-                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam
+                        amet provident necessitatibus dolore id.</p>
                 </div>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
-            </div>
-            <div class="service-item">
-                <div class="icon">
-                    <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam
+                        amet provident necessitatibus dolore id.</p>
                 </div>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam amet provident necessitatibus dolore id.</p>
-            </div>
+                <div class="service-item">
+                    <div class="icon">
+                        <img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="">
+                    </div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laborum, modi nihil et ipsa veniam
+                        amet provident necessitatibus dolore id.</p>
+                </div>
 
+            </div>
         </div>
-    </div>
     </section>
-<!-- End Service Section -->
+    <!-- End Service Section -->
 
-<!-- Projects Section -->
-<section id="projects">
-    <div class="projects container">
-        <div class="projects-header">
-            <h1 class="section-title">Recent <span>Projects</span></h1>
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="projects container">
+            <div class="projects-header">
+                <h1 class="section-title">Recent <span>Projects</span></h1>
+            </div>
+            <div class="all-projects">
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 1</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis,
+                            incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam
+                            labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit.
+                            Consequatur, voluptatem minus!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="img/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 2</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis,
+                            incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam
+                            labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit.
+                            Consequatur, voluptatem minus!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="img/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 3</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis,
+                            incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam
+                            labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit.
+                            Consequatur, voluptatem minus!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="img/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 4</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis,
+                            incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam
+                            labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit.
+                            Consequatur, voluptatem minus!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="img/img-1.png">
+                    </div>
+                </div>
+                <div class="project-item">
+                    <div class="project-info">
+                        <h1>Project 5</h1>
+                        <h2>Coding is Love</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis,
+                            incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam
+                            labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit.
+                            Consequatur, voluptatem minus!</p>
+                    </div>
+                    <div class="project-img">
+                        <img src="img/img-1.png">
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="all-projects">
-            <div class="project-item">
-                <div class="project-info">
-                    <h1>Project 1</h1>
-                    <h2>Coding is Love</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
-                </div>
-                <div class="project-img">
-                    <img src="img/img-1.png">
+    </section>
+    <!-- End Projects Section -->
+    <!-- About Section -->
+    <section id="about">
+        <div class="about container">
+            <div class="col-right">
+                <h1 class="section-title">About <span>me</span></h1>
+                <h2>Front End Developer</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum soluta suscipit. Eveniet sint,
+                    minus accusamus libero cupiditate odio distinctio, veritatis quaerat culpa similique nostrum error
+                    dicta, laboriosam ea impedit velit maiores soluta possimus architecto esse. Voluptatum veniam
+                    accusantium, deserunt numquam ipsa aut officia omnis, eligendi totam, quas rem praesentium.libero
+                    quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem
+                    minus</p>
+                <a href="#" class="cta">Download Resume</a>
+            </div>
+            <div class="col-left">
+                <div class="about-img">
+                    <img src="img/img-2.png" alt="">
                 </div>
             </div>
-            <div class="project-item">
-                <div class="project-info">
-                    <h1>Project 2</h1>
-                    <h2>Coding is Love</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+        </div>
+    </section>
+    <!-- End About Section -->
+
+
+    <!-- Contact Section -->
+<section id="contact">
+    <div class="contact container">
+        <div>
+            <h1 class="section-title">Contact <span>info</span></h1>
+        </div>
+        <div class="contact-items">
+            <div class="contact-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/phone.png" alt="">
                 </div>
-                <div class="project-img">
-                    <img src="img/img-1.png">
-                </div>
-            </div>
-            <div class="project-item">
-                <div class="project-info">
-                    <h1>Project 3</h1>
-                    <h2>Coding is Love</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
-                </div>
-                <div class="project-img">
-                    <img src="img/img-1.png">
-                </div>
-            </div>
-            <div class="project-item">
-                <div class="project-info">
-                    <h1>Project 4</h1>
-                    <h2>Coding is Love</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
-                </div>
-                <div class="project-img">
-                    <img src="img/img-1.png">
+                <div class="contact-info">
+                    <h1>Phone</h1>
+                    <h2>+1 234 123 1234</h2>
+                    <h2>+1 234 123 1234</h2>
                 </div>
             </div>
-            <div class="project-item">
-                <div class="project-info">
-                    <h1>Project 5</h1>
-                    <h2>Coding is Love</h2>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla corrupti est quos veritatis, incidunt minima exercitationem quaerat quod? Sapiente exercitationem harum deleniti quisquam labore libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus!</p>
+            <div class="contact-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/new-post.png" alt="">
                 </div>
-                <div class="project-img">
-                    <img src="img/img-1.png">
+                <div class="contact-info">
+                    <h1>Email</h1>
+                    <h2>info@gmail.com</h2>
+                    <h2>asrgo@gmail.com</h2>
+                </div>
+            </div>
+            <div class="contact-item">
+                <div class="icon">
+                    <img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" alt="">
+                </div>
+                <div class="contact-info">
+                    <h1>Adress</h1>
+                    <h2>Zhytomyr, Kyiv, Lwiw</h2>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<!-- End Projects Section -->
-<!-- About Section -->
-<section id="about">
-    <div class="about container">
-        <div class="col-right">
-            <h1 class="section-title">About <span>me</span></h1>
-            <h2>Front End Developer</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad laborum soluta suscipit. Eveniet sint, minus accusamus libero cupiditate odio distinctio, veritatis quaerat culpa similique nostrum error dicta, laboriosam ea impedit velit maiores soluta possimus architecto esse. Voluptatum veniam accusantium, deserunt numquam ipsa aut officia omnis, eligendi totam, quas rem praesentium.libero quidem cum ab molestiae saepe minus nam ut distinctio molestias, nisi velit. Consequatur, voluptatem minus</p>
-            <a href="#" class="cta">Download Resume</a>
-        </div>
-        <div class="col-left">
-            <div class="about-img">
-                <img src="img/img-2.png" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<!-- End About Section -->
+    <!-- End Contact Section -->
 
-
-<!-- Contact Section -->
-
-<div class="contact container">
-    <div><h1 class="section-title">Contact <span>info</span></h1> </div>
-    <div class="contact-items">
-        <div class="contact-item">
-            <div class="icon">
-                <img src="https://img.icons8.com/bubbles/100/000000/phone.png" alt="">
-            </div>
-            <div class="contact-info">
-                <h1>Phone</h1>
-                <h2>+1 234 123 1234</h2>
-                <h2>+1 234 123 1234</h2>
-            </div>
-        </div>
-        <div class="contact-item">
-            <div class="icon">
-                <img src="https://img.icons8.com/bubbles/100/000000/new-post.png" alt="">
-            </div>
-            <div class="contact-info">
-                <h1>Email</h1>
-                <h2>info@gmail.com</h2>
-                <h2>asrgo@gmail.com</h2>
-            </div>
-        </div>
-        <div class="contact-item">
-            <div class="icon">
-                <img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" alt="">
-            </div>
-            <div class="contact-info">
-                <h1>Adress</h1>
-                <h2>Zhytomyr, Kyiv, Lwiw</h2>
-            </div>
-        </div>
-    </div>
-</div>
-
-<!-- End Contact Section -->
-    
     <script src="js/main.js"></script>
 </body>
+
 </html>
