--- a/index.html
+++ b/index.html
@@ -209,6 +209,32 @@
 </section>
     <!-- End Contact Section -->
 
+
+    <!-- Footer Section -->
+<section id="footer">
+    <div class="container footer">
+        <div class="brand"><h1><span>S</span>haif <span>A</span>rfan</h1></div>
+        <h2>Your Complete Web Solution</h2>
+        <div class="social-icon">
+            <div class="social-item">
+                <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" alt=""></a>
+            </div>
+            <div class="social-item">
+                <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" alt=""></a>
+            </div>
+            <div class="social-item">
+                <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" alt=""></a>
+            </div>
+            <div class="social-item">
+                <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" alt=""></a>
+            </div>
+        </div>
+        <p>Copyright © 2020 Arfan. All right reserved</p>
+    </div>
+</section>
+
+
+    <!-- End Footer Section -->
     <script src="js/main.js"></script>
 </body>
 
